--- a/wifimanage/src/main/res/values/colors.xml
+++ b/wifimanage/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
 
     <color name="colorOrange">#f9bf2c</color>
     <color name="colorBlue">#409EFF</color>
+    <color name="colorRed">#F56C6C</color>
 
     <color name="colorBg">#f4f4f4</color>
     <!--文字颜色-->
