--- a/wifimanage/src/main/res/layout/delegate_me.xml
+++ b/wifimanage/src/main/res/layout/delegate_me.xml
@@ -1,15 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    xmlns:circle="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:background="@color/colorBg">
+<RelativeLayout
+    android:layout_marginTop="16dp"
+    android:padding="16dp"
+    android:background="@android:color/white"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <com.ascend.wangfeng.wifimanage.views.CircleImageView
+        android:id="@+id/cimg_icon"
+        android:layout_width="72dp"
+        android:layout_height="72dp"
+        circle:bg="@color/colorAccent"
+        android:src="@mipmap/p_2"/>
     <TextView
-        android:id="@+id/textView2"
+        android:layout_marginTop="8dp"
+        android:id="@+id/tv_name"
+        android:layout_toRightOf="@+id/cimg_icon"
+        android:layout_marginLeft="16dp"
+        android:textColor="@color/textFir"
+        android:textSize="18sp"
+        android:text="桃夭"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="我的"
-        tools:layout_editor_absoluteX="151dp"
-        tools:layout_editor_absoluteY="274dp"/>
-</android.support.constraint.ConstraintLayout>
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/tv_desc"
+        android:layout_toRightOf="@+id/cimg_icon"
+        android:layout_marginTop="8dp"
+        android:layout_below="@+id/tv_name"
+        android:layout_marginLeft="16dp"
+        android:textSize="18sp"
+        android:text="设备编号"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+</RelativeLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_marginTop="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/tv_notice"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:background="@android:color/white"
+                android:textColor="@color/textFir"
+                android:drawableLeft="@mipmap/ic_notice"
+                android:drawablePadding="16dp"
+                android:drawableTint="@color/textSec"
+                android:text="通知"/>
+            <View
+                android:layout_width="16dp"
+                android:layout_height="2px"
+                android:background="@android:color/white"/>
+            <TextView
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:gravity="center_vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/white"
+                android:textColor="@color/textFir"
+                android:drawableLeft="@mipmap/ic_buy"
+                android:drawablePadding="16dp"
+                android:drawableTint="@color/textSec"
+                android:text="购买"/>
+            <View
+                android:layout_width="16dp"
+                android:layout_height="2px"
+                android:background="@android:color/white"/>
+            <TextView
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:gravity="center_vertical"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/white"
+                android:textColor="@color/textFir"
+                android:drawableLeft="@mipmap/ic_share"
+                android:drawablePadding="16dp"
+                android:drawableTint="@color/textSec"
+                android:text="推荐分享"/>
+            <View
+                android:layout_width="16dp"
+                android:layout_height="2px"
+                android:background="@android:color/white"/>
+            <TextView
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:gravity="center_vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/white"
+                android:textColor="@color/textFir"
+                android:drawableLeft="@mipmap/ic_feedback"
+                android:drawablePadding="16dp"
+                android:drawableTint="@color/textSec"
+                android:text="反馈"/>
+            <TextView
+                android:layout_marginTop="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:gravity="center_vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/white"
+                android:textColor="@color/textFir"
+                android:drawableLeft="@mipmap/ic_about_us"
+                android:drawablePadding="16dp"
+                android:drawableTint="@color/textSec"
+                android:text="关于我们"/>
+        </LinearLayout>
+    </ScrollView>
+
+</LinearLayout>
