--- a/wifimanage/src/main/res/layout/delegate_register.xml
+++ b/wifimanage/src/main/res/layout/delegate_register.xml
@@ -72,6 +72,7 @@
     </android.support.design.widget.TextInputLayout>
 
     <Button
+        android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
