--- a/wifimanage/src/main/res/layout/delegate_user.xml
+++ b/wifimanage/src/main/res/layout/delegate_user.xml
@@ -66,8 +66,14 @@
         android:textColor="@color/textFir"
         android:textSize="18sp"/>
 
-    <com.github.mikephil.charting.charts.BarChart
+  <!--  <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/bar_history"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"/>-->
+    <com.ascend.wangfeng.wifimanage.views.GithubActivityView
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:id="@+id/github"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
