--- a/wifimanage/src/main/res/layout/item_device_square.xml
+++ b/wifimanage/src/main/res/layout/item_device_square.xml
@@ -12,6 +12,7 @@
         android:id="@+id/img_icon"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:tint="@color/textFir"
         tools:src="@mipmap/ic_computer"/>
 
     <TextView
