--- a/wifimanage/src/main/res/layout/delegate_register.xml
+++ b/wifimanage/src/main/res/layout/delegate_register.xml
@@ -14,7 +14,7 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <com.baidu.mapapi.map.MapView
+        <com.baidu.mapapi.map.TextureMapView
             android:id="@+id/map"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
