--- a/wifimanage/src/main/res/layout/delegate_user.xml
+++ b/wifimanage/src/main/res/layout/delegate_user.xml
@@ -1,79 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:circle="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp">
-
-        <com.ascend.wangfeng.wifimanage.views.CircleImageView
-            android:id="@+id/cimg_icon"
-            android:layout_width="88dp"
-            android:layout_height="88dp"
-            android:layout_margin="16dp"
-            tools:src="@mipmap/p_2"
-            circle:bg="@color/colorAccent"
-            circle:online="true"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="16dp"
-            android:orientation="vertical">
+            android:layout_height="120dp">
 
-            <TextView
-                android:id="@+id/tv_name"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:text="王枫"
-                android:textColor="@color/textFir"
-                android:textSize="18sp"/>
+            <com.ascend.wangfeng.wifimanage.views.CircleImageView
+                android:id="@+id/cimg_icon"
+                android:layout_width="88dp"
+                android:layout_height="88dp"
+                android:layout_margin="16dp"
+                circle:bg="@color/colorAccent"
+                circle:online="true"
+                tools:src="@mipmap/p_2"/>
 
-            <TextView
-                android:id="@+id/tv_desc"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:text="最近上线时间: 18:00"
-                android:textSize="14sp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="16dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:text="王枫"
+                    android:textColor="@color/textFir"
+                    android:textSize="18sp"/>
+
+                <TextView
+                    android:id="@+id/tv_desc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:text="最近上线时间: 18:00"
+                    android:textSize="14sp"/>
+            </LinearLayout>
         </LinearLayout>
+
+        <!--设备表-->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:text="我的设备"
+            android:textColor="@color/textFir"
+            android:textSize="18sp"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_devices"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <!--设备表-->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:text="最近一周使用"
+            android:textColor="@color/textFir"
+            android:textSize="18sp"/>
+
+        <!--  <com.github.mikephil.charting.charts.BarChart
+              android:id="@+id/bar_history"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"/>-->
+        <com.ascend.wangfeng.wifimanage.views.GithubActivityView
+            android:id="@+id/github"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"/>
     </LinearLayout>
-
-    <!--设备表-->
-    <TextView
-        android:layout_margin="16dp"
+    <RelativeLayout
+        android:id="@+id/rl_add"
+        android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="我的设备"
-        android:textColor="@color/textFir"
-        android:textSize="18sp"/>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_devices"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <!--设备表-->
-    <TextView
-        android:layout_margin="16dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="最近一周使用"
-        android:textColor="@color/textFir"
-        android:textSize="18sp"/>
-
-  <!--  <com.github.mikephil.charting.charts.BarChart
-        android:id="@+id/bar_history"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>-->
-    <com.ascend.wangfeng.wifimanage.views.GithubActivityView
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:id="@+id/github"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:background="@color/colorBg">
+        <Button
+            android:id="@+id/btn_add"
+            android:layout_margin="64dp"
+            android:layout_centerInParent="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="新增关注"
+            android:textColor="@android:color/white"
+            android:background="@drawable/tv_round_green"/>
+    </RelativeLayout>
+</RelativeLayout>
