--- a/wifimanage/src/main/res/layout/delegate_person_detail.xml
+++ b/wifimanage/src/main/res/layout/delegate_person_detail.xml
@@ -61,6 +61,8 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_devices"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <!--设备表-->
