--- a/wifimanage/src/main/res/layout/delegate_me.xml
+++ b/wifimanage/src/main/res/layout/delegate_me.xml
@@ -26,7 +26,7 @@
         android:layout_marginLeft="16dp"
         android:textColor="@color/textFir"
         android:textSize="18sp"
-        android:text="桃夭"
+        android:text="李雷"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
@@ -36,7 +36,7 @@
         android:layout_below="@+id/tv_name"
         android:layout_marginLeft="16dp"
         android:textSize="18sp"
-        android:text="设备编号"
+        android:text="005056333940"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </RelativeLayout>
