--- a/wifimanage/src/main/res/layout/delegate_user.xml
+++ b/wifimanage/src/main/res/layout/delegate_user.xml
@@ -45,7 +45,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="最近上线时间: 18:00"
+                    android:text="最近上线时间: 2018/6/1 18:00"
                     android:textSize="14sp"/>
             </LinearLayout>
         </LinearLayout>
@@ -60,6 +60,8 @@
             android:textSize="18sp"/>
 
         <android.support.v7.widget.RecyclerView
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:id="@+id/rv_devices"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
