--- a/wifimanage/src/main/res/layout/delegate_person_detail.xml
+++ b/wifimanage/src/main/res/layout/delegate_person_detail.xml
@@ -66,20 +66,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <!--设备表-->
-    <TextView
+    <android.support.v7.widget.RecyclerView
         android:layout_margin="16dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="最近一周使用"
-        android:textColor="@color/textFir"
-        android:textSize="18sp"/>
-
-    <!--<com.github.mikephil.charting.charts.BarChart
-        android:id="@+id/bar_history"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>-->
-    <com.ascend.wangfeng.wifimanage.views.GithubActivityView
-        android:id="@+id/gt_history"
+        android:id="@+id/rv_history"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 </LinearLayout>
