--- a/wifimanage/src/main/res/layout/delegate_user.xml
+++ b/wifimanage/src/main/res/layout/delegate_user.xml
@@ -45,7 +45,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="最近上线时间: 2018/6/1 18:00"
+                    tools:text="最近上线: 2018/6/1 18:00"
                     android:textSize="14sp"/>
             </LinearLayout>
         </LinearLayout>
@@ -74,10 +74,6 @@
             android:textColor="@color/textFir"
             android:textSize="18sp"/>
 
-        <!--  <com.github.mikephil.charting.charts.BarChart
-              android:id="@+id/bar_history"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"/>-->
         <com.ascend.wangfeng.wifimanage.views.GithubActivityView
             android:id="@+id/github"
             android:layout_width="match_parent"
@@ -87,7 +83,6 @@
     </LinearLayout>
     <RelativeLayout
         android:id="@+id/rl_add"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorBg">
