--- a/wifimanage/src/main/res/layout/delegate_device_edit.xml
+++ b/wifimanage/src/main/res/layout/delegate_device_edit.xml
@@ -33,8 +33,8 @@
             android:layout_height="wrap_content"
             android:drawablePadding="@dimen/dp_4"
             android:gravity="center_vertical"
-            android:hint="请输入名称"
-            android:inputType="number"/>
+            android:singleLine="true"
+            android:hint="请输入名称"/>
     </android.support.design.widget.TextInputLayout>
 
     <RelativeLayout
