--- a/wifimanage/src/main/res/layout/delegate_user.xml
+++ b/wifimanage/src/main/res/layout/delegate_user.xml
@@ -8,6 +8,9 @@
 
 
     <LinearLayout
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:id="@+id/ll_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -66,14 +69,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <!--设备表-->
+
+
+
         <TextView
+            android:id="@+id/tv_liveness_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:text="最近一周使用"
+            android:text="最近一周"
             android:textColor="@color/textFir"
             android:textSize="18sp"/>
-
         <com.ascend.wangfeng.wifimanage.views.GithubActivityView
             android:id="@+id/github"
             android:layout_width="match_parent"
@@ -85,6 +91,7 @@
         android:id="@+id/rl_add"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         android:background="@color/colorBg">
         <Button
             android:id="@+id/btn_add"
