--- a/wifimanage/src/main/res/layout/item_device_square.xml
+++ b/wifimanage/src/main/res/layout/item_device_square.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="4dp"
+    android:layout_margin="4dp"
     android:background="@drawable/ll_round_normal">
 <!--方形布局-->
     <ImageView
