组件化功能新增: 模块单独调试

--- a/photo/src/main/res/values/style.xml
+++ b/photo/src/main/res/values/style.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">#03A9F4</item>
+        <item name="colorPrimaryDark">#0288D1</item>
+        <item name="colorAccent">#00BCD4</item>
+    </style>
     // bottom up and down anim
     <style name="anim_panel_up_from_bottom" parent="@android:style/Animation">
         <item name="android:windowEnterAnimation">@anim/push_bottom_in</item>
