头条详情页

--- a/latte-ec/src/main/res/layout/delegate_first.xml
+++ b/latte-ec/src/main/res/layout/delegate_first.xml
@@ -12,6 +12,7 @@
     <com.ascend.wangfeng.latte.ec.main.taobao.CustomNestedScrollView
         android:id="@+id/sv"
         android:layout_width="match_parent"
+        android:focusableInTouchMode="true"
         android:layout_height="match_parent">
         <LinearLayout
             android:descendantFocusability="blocksDescendants"
