--- a/example/src/main/res/layout/delegate_banner.xml
+++ b/example/src/main/res/layout/delegate_banner.xml
@@ -2,18 +2,28 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <com.ms.banner.Banner
-        android:layout_margin="16dp"
         android:id="@+id/banner"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:scroll_time="1600"
-        app:indicator_width="12dp"
+        android:layout_margin="16dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         app:indicator_height="9dp"
         app:indicator_padding="0dp"
-        app:layout_constraintDimensionRatio="1080:908" />
+        app:indicator_width="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1080:908"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.451"
+        app:scroll_time="1600" />
 
 </android.support.constraint.ConstraintLayout>
